--- a/manifest.json
+++ b/manifest.json
@@ -74,7 +74,7 @@
 			"https" : false,
 			"proxy" : {
 				"/devApi" : {
-					"target" : "http://127.0.0.1:8081/gymnasium",
+					"target" : "http://localhost:8081/gymnasium",
 					"changeOrigin" : true,
 					"secure" : true,
 					"pathRewrite" : {
